create github pages

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
   <meta name="twitter:card" content="summary_large_image"/>
   <meta name="twitter:image:src" content="">
   <meta property="og:image" content="">
-  <meta name="twitter:title" content="Home">
+  <meta name="twitter:title" content="Полі-Транс - вантажоперевезення по Україні та ЄС">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
   <link rel="shortcut icon" href="assets/images/logo5.png" type="image/x-icon">
   <meta name="description" content="">
   
   
-  <title>Home</title>
+  <title>Полі-Транс - вантажоперевезення по Україні та ЄС</title>
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
@@ -242,7 +242,7 @@
         </div>
         <div class="row justify-content-center mt-4">
             <div class="col-lg-8 mx-auto mbr-form" data-form-type="formoid">
-                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="Yh4I7pun651/g1jXoRp6T2VIgEbeaTunqS2IuIhjfCi4s4GH4pPBGRh1isrcAIBfZ+TrW/IF7QcR/o7To2AGdZ8AyOnCMrHCTa0NqIOxtzuhj1K6KBbOhqXs1/W4brX4">
+                <form action="https://mobirise.eu/" method="POST" class="mbr-form form-with-styler mx-auto" data-form-title="Form Name"><input type="hidden" name="email" data-form-email="true" value="ZSdUHiUypJlc3sy1Uxx5lwBCvZsxdKesdxVqX1qwYGHHWTf2ogJ6KyRZ4aeosgdxRg30H22uZexZKI1vsI+NX4XnXZweFxklW7MHdNaXQkrS9SC++tRDkxbBW+g0qdoM">
                     <p class="mbr-text mbr-fonts-style align-center mb-4 display-7">
                         Заповніть форму і ми скоро зв'яжемося з вами</p>
                     <div class="row">
